--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -6,4 +6,8 @@
 
 <div>
   <%= link_to 'Back', root_path, class: 'btn btn-default' %>
+  <%= link_to 'Edit', edit_play_path(@play), class: 'btn btn-primary' %>
+  <%= link_to 'Delete', play_path(@play), method: :delete, data: {
+    confirm: 'Are you sure?'
+    }, class: 'btn btn-danger' %>
 </div>
