--- a/app/views/plays/_form.html.erb
+++ b/app/views/plays/_form.html.erb
@@ -1,7 +1,8 @@
 <%= simple_form_for @play , html: {multipart: true} do |f| %>
-  <%= select_tag(:category_id, options_for_select(@categories, @play.category_id), :prompt => 'Select Category') %>
+  <%= select_tag(:category_id, options_for_select(@categories, @play.category_id), prompt: 'Select Category' , class: 'form-control') %>
   <%= f.input :title, label: 'Play Title' %>
   <%= f.input :description %>
   <%= f.input :director %>
+  <%= f.file_field :play_img , class: 'form-control' %>
   <%= f.button :submit %>
 <% end %>
