--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -6,10 +6,14 @@
   <% else %>
   <div class="row">
     <% @plays.each do |play| %>
+    <div class="col-md-4">
       <h2><%= link_to play.title, play_path(play) %></h2>
-      <div><%= play.title %></div>
+      <%= image_tag play.play_img, class: 'img-responsive' %>
+    </div>
+
+      <!-- <div><%= play.title %></div>
       <div><%= play.description %></div>
-      <div><%= play.director %></div>
+      <div><%= play.director %></div> -->
     <% end %>
   </div>
 <% end %>
