--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -1,9 +1,16 @@
-<h2><%= @play.title %></h2>
-<h3><%= @play.director %></h3>
-<h4><%= @play.category.name %></h4>
-<p>
-  <%= @play.description %>
-</p>
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag @play.play_img, class: 'img-responsive' %>
+  </div>
+  <div class="col-md-8">
+    <h2><%= @play.title %></h2>
+    <h3><%= @play.director %></h3>
+    <h4><%= @play.category.name %></h4>
+    <p>
+      <%= @play.description %>
+    </p>
+  </div>
+</div>
 
 <div class="btn btn-group">
   <% if user_signed_in? %>
