--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -12,6 +12,16 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-md-12">
+    <h2>Reviews</h2>
+    <%= render @play.reviews %>
+    <div>
+      <%= link_to "Add Review", new_play_review_path(@play), class: "btn btn-default" %>
+    </div>
+  </div>
+</div>
+
 <div class="btn btn-group">
   <% if user_signed_in? %>
    <% if @play.user_id == current_user.id %>
