--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -4,3 +4,12 @@
 <p>
   <%= review.comment %>
 </p>
+
+<% if user_signed_in? %>
+  <% if review.user_id == current_user.id %>
+    <div class="btn-group">
+      <%= link_to 'Edit', edit_play_review_path(review.play, review), class: 'btn btn-default' %>
+      <%= link_to 'Delete', play_review_path(review.play, review), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-default' %>
+    </div>
+  <% end %>
+<% end %>
