Adds jquery plug in to rate with stars

--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -33,3 +33,13 @@
     <% end %>
   <% end %>
 </div>
+
+<script>
+  $('.review-stars').raty({
+    readOnly: true,
+    score: function() {
+      return $(this).attr('data-score');
+    },
+    path: '/assets/'
+  });
+</script>
