--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,6 +1,7 @@
-<p>
-  <%= review.rating %>
-</p>
+
+<div class="review-stars" data-score="<%= review.rating %>">
+</div>
+
 <p>
   <%= review.comment %>
 </p>
